@@ -28,6 +28,7 @@ Additions:
    * Add elm_systray.[ch]: Add support to D-Bus systray icons.
    * Add elm_label_slide_mode_set(), elm_label_slide_mode_get()
    * Add elm_label_slide_go()
+   * Add a label signal callback "slide,end"
 
 Improvements:
 
