@@ -886,3 +886,7 @@
 2012-01-04  ChunEon Park <hermet@hermet.pe.kr>
 
         * Deprecate elm_label_slide_set()/get() and added elm_label_slide_mode_set()/get() instead and elm_label_slide_go().
+
+2012-01-05  ChunEon Park <hermet@hermet.pe.kr>
+
+        * Added a label signal callback "slide,end"
